@@ -23,6 +23,7 @@
 * Made it so that when a user clicks "new group" the detail panel view is not displayed.  This will prevent a user from clicking "cancel" on the add new group pop-up and then creating a group through the detail panel view.  
 	*The detail panel is now only shown when a group is selected or a new group is successfully created.
 *Implemented a check on the GroupAddView that makes sure when a user is creating a new group that they are not selecting a group name that has already been created.	
+* Change invoice so it shows any other accounts that have percentages in the request.
 
 5.3.5.1(12/21/2011)
 --------------------
